# flag-drop

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: fa6e8179208f_initial_schema.py
src/app/: config.py  main.py
src/app/api/: api_keys.py  audit.py  auth.py  dashboard.py  deps.py  environments.py  evaluation.py  flags.py  health.py  projects.py
src/app/models/: __init__.py  api_key.py  audit_log.py  environment.py  flag.py  flag_value.py  project.py  usage_record.py  user.py
src/app/schemas/: auth.py
src/app/services/: api_keys.py  audit.py  auth.py  environments.py  flags.py  projects.py  usage.py
src/app/templates/api_keys/: list.html
src/app/templates/audit/: list.html
src/app/templates/auth/: login.html  signup.html
src/app/templates/dashboard/: index.html  usage.html
src/app/templates/environments/: list.html
src/app/templates/flags/: detail.html  list.html  new.html
src/app/templates/layouts/: app.html  base.html
src/app/templates/projects/: new.html  settings.html
tests/: conftest.py  test_api_keys.py  test_audit.py  test_auth.py  test_dashboard.py  test_environments.py  test_evaluation.py  test_evaluation_advanced.py  test_flags.py  test_health.py  test_integration.py  test_models.py  test_projects.py  test_qa.py  test_usage.py
